--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
         </header>
 
         <section class="professional-summary">
-            <p>Senior Backend Engineer with 7+ years developing scalable systems using <strong>Kotlin and Java</strong>. Specialized in microservices architecture, cloud infrastructure (<strong>Kubernetes, Terraform</strong>), and <strong>AWS deployments</strong>. Proven track record in fintech and enterprise domains with experience in remote collaboration across international teams.</p>
+            <p>Senior Backend Engineer with 7+ years developing scalable systems using <strong>Kotlin and Java</strong>. Specialized in microservices architecture, cloud infrastructure (<strong>Kubernetes, Terraform</strong>). Proven track record in fintech and enterprise domains with experience in remote collaboration across international teams.</p>
         </section>
 
         <div class="main-content">
@@ -1094,7 +1094,7 @@
                     <h2 class="section-title">Technical Skills</h2>
                     <div class="skills-grid">
                         <div class="skill-item"><strong>Languages:</strong> Kotlin, Java, Groovy</div>
-                        <div class="skill-item"><strong>Cloud & Infrastructure:</strong> AWS, Kubernetes, Docker, Helm, Terraform, OpenShift</div>
+                        <div class="skill-item"><strong>Cloud & Infrastructure:</strong> Kubernetes, Docker, Helm, Terraform, OpenShift</div>
                         <div class="skill-item"><strong>Frameworks:</strong> Spring Boot, Spring Cloud</div>
                         <div class="skill-item"><strong>Databases:</strong> PostgreSQL, Oracle, MongoDB, Tarantool</div>
                         <div class="skill-item"><strong>Build Tools:</strong> Gradle, Maven</div>
@@ -1177,9 +1177,9 @@
                         <p class="duration">August 2018 - November 2020</p>
                         <div class="job-description">
                             <p>Designed and built core microservices for self-service device management (ATMs, kiosks) with independent scaling using Kubernetes and improved fault tolerance.</p>
-                            <p>Set up infrastructure automation with Terraform and configured CI/CD pipelines in Jenkins for automated testing and deployment to AWS environments.</p>
+                            <p>Set up infrastructure automation with Terraform and configured CI/CD pipelines in Jenkins for automated testing and deployment.</p>
                             <p>Contributed to decomposing the legacy monolith: extracted core domain functionality into standalone Spring Boot services written in Kotlin and Java using the Strangler pattern; defined API contracts and Flyway migration strategy to maintain backward compatibility and zero-downtime rollouts.</p>
-                            <p><strong>Tech Stack:</strong> Kotlin, Java, Spring Boot, AWS, Terraform, Docker, Kubernetes</p>
+                            <p><strong>Tech Stack:</strong> Kotlin, Java, Spring Boot, Terraform, Docker, Kubernetes</p>
                         </div>
                     </div>
                 </section>
